# nn-surrogate-benchmark

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  heat_inversion_uniform.csv  pyproject.toml
data/: bbob_f024_i01_d02_samples.csv  heat_inversion.csv
nn_surrogate_benchmark/: __main__.py  bbob_sampler.py  ela_comparator.py  hyperopt.py  hyperopt_runner.py  latency_benchmark.py  learning_to_rank.py  loss.py  model_evaluator.py  rbf.py  sobolev.py  surrogate.py  surrogate_sobol.py  tensorboard.py
nn_surrogate_benchmark/experiments/: scaling_laws.py
