[tool.poetry]
name = "nn-surrogate-benchmark"
version = "0.1.0"
description = ""
authors = ["WojtAcht <wachtelik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
lightning = "^2.5.0.post0"
pandas = "^2.2.3"
numpy = "^2.2.1"
tensorboard = "^2.18.0"
pre-commit = "^4.0.1"
ruff = "^0.9.1"
matplotlib = "^3.10.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
