[tool.poetry]
name = "nn-surrogate-benchmark"
version = "0.1.0"
description = ""
authors = ["WojtAcht <wachtelik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = "^2.5.1"
lightning = "^2.5.0.post0"
tensorboard = "^2.18.0"
pre-commit = "^4.0.1"
ruff = "^0.9.1"
pandas = "<2.1.0"
scikit-learn = "<1.3.0"
numpy = "<1.25.0"
pflacco = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
